--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -10,8 +10,9 @@ jobs:
     - name: Cache assets
       uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3
       with:
-        # npm cache files are stored in `~/.npm` on Linux/macOS
-        path: tmp
+        path: |
+          tmp
+          nginx
         key: ${{ runner.os }}-build-${{ hashFiles('Makefile') }}
         restore-keys: |
           ${{ runner.os }}-build-
