--- a/test/test.conf
+++ b/test/test.conf
@@ -13,6 +13,9 @@ http {
         listen       127.0.0.1:1234;
         server_name  localhost;
         location /{
+          proxy_connect_timeout　　10;
+          proxy_send_timeout　　10;
+          proxy_read_timeout　　60;
           proxy_detach_cookie_prefix example_prefix_;
           proxy_pass http://localhost:10080;
         }
