add fuzzing test

--- a/test/test.conf
+++ b/test/test.conf
@@ -11,12 +11,29 @@ http {
     server {
         listen       127.0.0.1:1234;
         server_name  localhost;
-        location /{
+        location / {
           proxy_connect_timeout 10;
           proxy_send_timeout 10;
           proxy_read_timeout 60;
           proxy_detach_cookie_prefix example_prefix_;
-          proxy_pass http://localhost:10080;
+          proxy_pass http://localhost:10080/;
+        }
+
+
+        location /example_prefix {
+          proxy_connect_timeout 10;
+          proxy_send_timeout 10;
+          proxy_read_timeout 60;
+          proxy_detach_cookie_prefix example_prefix_;
+          proxy_pass http://localhost:10080/;
+        }
+
+        location /a {
+          proxy_connect_timeout 10;
+          proxy_send_timeout 10;
+          proxy_read_timeout 60;
+          proxy_detach_cookie_prefix a;
+          proxy_pass http://localhost:10080/;
         }
     }
 }
